# instinct8

./: .gitignore  .pypirc.example  CHANGELOG.md  Makefile  PIPELINE_DIAGRAM.md  PRESENTATION_SHORT.md  PUBLISH_MCP.md  PUBLISH_PYPI_NOW.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  Selective_Salience_Compression_Review.md  WHITEBOARD_DIAGRAM.md  implementation_guide.md  push_steps.sh  pyproject.toml  requirements.txt  run_codex_cli_eval.py  run_codex_eval.py  run_comparison_eval.py  run_eval.py  run_locomo_eval.py  run_rigorous_eval.py
.claude/: settings.local.json
Formula/: instinct8.rb
PR_PARTY/: PR01_IMPLEMENTATION_CHECKLIST.md  PR01_PLANNING_SUMMARY.md  PR01_SELECTIVE_SALIENCE_COMPRESSION.md  PR01_TESTING_GUIDE.md  README.md
archive/PR_PARTY/: PR01_README.md
data/A-mem/: utils.py
docs/: CLAUDE_CODE_INTEGRATION.md  CODEX_EVALUATION_SETUP.md  CODEX_FORK_PACKAGING.md  CODEX_REPLACEMENT.md  CODE_PROTECTION.md  FILE_ACCESS_GUIDE.md  HOW_TO_ENABLE_FILE_ACCESS.md  INSTALLATION.md  MCP_REGISTRY_SUBMISSION.md  PRIVATE_API_SETUP.md  PUBLISHING.md  PYPI_CREDENTIALS.md  README.md  TESTING.md  budget_constraint_analysis.md  budget_constraint_explanation.md  budget_constraint_root_cause.md  constraint_loss_analysis.md  context_compression_middleware_star.md  context_compression_prd.md  metrics_accuracy_verification.md  pre_implementation_checklist.md  strategy_h_evaluation_summary.md
evaluation/: __init__.py  codex_cli_wrapper.py  harness.py  metrics.py  token_budget.py
examples/: basic_usage.py  codex_integration_example.py  codex_replacement_example.sh  config_example.json  instinct8_agent_example.py
mcp_server/: CHANGELOG.md  FAQ.md  LICENSE-BSL  QUICKSTART.md  README.md  TEST_WITH_CLAUDE_CODE.md  TROUBLESHOOTING.md  pyproject.toml  server.json
mcp_server/examples/: README.md  debugging_session.md  feature_development.md  goal_drift_prevention.md  hello_world.md
mcp_server/instinct8_mcp/: __init__.py  __main__.py  prompts.py  sampling.py  server.py  session_manager.py  strategy_adapter.py  tools.py
results/: 8k_test_results.json  baseline_codex_8k_results.json  baseline_long_results.json  baseline_results.json  codex_baseline_eval.json  coding_amem_1samples_20251213_005917.json  coding_amem_1samples_20251213_100331.json  comparison_baseline_vs_instinct8.json  comparison_baseline_vs_strategyf.json  comparison_table.md  hierarchical_amem_20251213_152408.json  hierarchical_codex_20251213_153156.json  hierarchical_no_compression_20251213_151832.json  instinct8_8k_results.json  instinct8_test_results.json  presentation_table.md  strategy_h_50turn_results.json  strategy_i_product_design_test.json  strategyf_8k_results.json  template_research-synthesis-001_eval.json  template_research-synthesis-002-long_eval.json
scripts/: capture_cp1_responses.py  check_test_status.py  compare_baseline_vs_instinct8.py  diagnose_all_strategies.py  diagnose_constraint_loss.py  generate_detailed_table.py  generate_diverse_templates_v2.py  generate_presentation_table.py  generate_shift_templates.py  investigate_budget_cp1.py  investigate_budget_response.py  publish.sh  run_appserver_eval.py  run_codex_cli_eval.py  run_comparison_eval.py  run_eval.py  run_hierarchical_eval.py  run_locomo_eval.py  run_rigorous_eval.py  show_granular_metrics.py  test_budget_judge.py  test_granular_collection.py  test_strategy_f_product_pivot.py  test_strategy_i_product_design.py  test_with_actual_compression.py  trace_granular_flow.py
selective_salience/: README.md  __init__.py
strategies/: __init__.py  strategy_a_naive.py  strategy_b_codex.py  strategy_base.py  strategy_f_protected_core.py  strategy_h_selective_salience.py
templates/: architecture-migration-011-microservices-8k-4compactions.json  container-orchestration-013-docker-kubernetes-shift-8k-4compactions.json  content-strategy-012-fashion-8k-4compactions.json  hierarchical-eval-60-turn.json  ml-fraud-010-detection-8k-4compactions.json  ml-research-014-budget-shift-8k-4compactions.json  product-design-009-healthcare-8k-4compactions.json  product-pivot-015-multi-shift-8k-4compactions.json  research-synthesis-001.json  research-synthesis-002-long.json  research-synthesis-003-8k-test.json  research-synthesis-004-8k-test.json  research-synthesis-005-8k-simple.json  research-synthesis-006-8k-4compactions.json  research-synthesis-007-8k-4compactions.json  research-synthesis-008-8k-4compactions-realistic.json  research-synthesis-020.json  test-edge-cases.json  test-simple.json
tests/: __init__.py  conftest.py  test_artificial_8k_compaction_trigger.py  test_budget_judge.py  test_granular_collection.py  test_strategy_f_product_pivot.py  test_strategy_i_product_design.py  test_with_actual_compression.py
(+59 files in other folders)
