[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-compression-eval"
version = "0.1.0"
description = "Evaluation framework for LLM context compression strategies"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "dataclasses-json>=0.6.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "mypy>=1.0.0"]

[project.scripts]
run-eval = "scripts.run_eval:main"
run-locomo = "scripts.run_locomo_eval:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evaluation*", "strategies*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
