[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instinct8-agent"
version = "0.4.2"
description = "Instinct8 Agent - Coding agent with Selective Salience Compression for better goal preservation"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Instinct8", email = "info@instinct8.ai"}
]
keywords = ["llm", "compression", "context", "agents", "salience", "goal-preservation"]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.2.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "python-dotenv>=1.0.0",
]

# Evaluation and LLM providers (for research and A-MEM experiments)
eval = [
    "anthropic>=0.18.0",
    "litellm>=1.50.0",
]

# Evaluation metrics (for benchmarking compression strategies)
metrics = [
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
]

# Data processing utilities
data = [
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "dataclasses-json>=0.6.0",
]

# Heavy ML dependencies (optional - sentence-transformers can use lighter backends)
# Only needed for specific embedding models or evaluation
heavy = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

# Complete development environment with all optional dependencies
all = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.18.0",
    "litellm>=1.50.0",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "dataclasses-json>=0.6.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.scripts]
instinct8-agent = "selective_salience.agent_cli:main"
instinct8 = "selective_salience.instinct8_cli:main"

[project.urls]
Homepage = "https://github.com/jjjorgenson/instinct8"
Documentation = "https://github.com/jjjorgenson/instinct8/blob/main/README.md"
Repository = "https://github.com/jjjorgenson/instinct8"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "selective_salience*",
    "strategies*", 
    "evaluation*",
    "evaluation.agents*",
    "evaluation.datasets*"
]

[tool.setuptools.package-data]
selective_salience = ["README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires LLM API keys"]
